fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,10 @@ html, body { width: 100%; height: 100%; background-color: #231F20; }
 
 #wrapper { padding: 0px 20px; height: 100%; }
 
-#logo img { width: 137px; height: 43px; position: absolute; top: 20px; left: 20px; }
+#logo { position: relative; top: 20px; margin-bottom: 90px; }
+#logo img { width: 137px; height: 43px; }
 
-#prompts { display: none; margin-top: 100px; height: 70%; overflow-y: hidden; }
+#prompts { display: none; height: 65%; overflow-y: hidden; }
 #prompts .questions { /*border: 1px solid white;*/ }
 #prompts.on { display: block; /*border: 1px solid white;*/ }
 #prompts p { color: white; margin-bottom: 10px; font: normal 30px helveticaneuelt; color: white; }
